--- a/css/style.css
+++ b/css/style.css
@@ -1181,4 +1181,58 @@ div#dopBox {
         .str2.str3 a:nth-child(2) {
             line-height: 39px;
         }
+        
+        h1.strText {
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        #container1 div:nth-child(1) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            grid-row-start:1 ;
+            grid-row-end: 2;
+        }
+        #container1 {
+            display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 100px;
+    grid-template-rows: 100px 124px 124px 124px 124px 124px 124px 50px 50px;
+        }
+        #container1 img {
+            border-radius: 8px;
+            box-shadow: 1px 1px 30px #fff;
+            width: 300px;
+            cursor: pointer;
+        }
+        .col2 {
+            border: 1px solid white;
+            margin: 9px;
+        }
+        #containerPazl {
+            width: 370px;
+            display: grid;
+            grid-template-columns: repeat(3, 122px);
+            grid-template-rows: 100px 100px 100px;
+        }
+        .wrPazl {
+            margin-top: 187px;
+            display: grid;
+            grid-template-columns: 369px;
+            align-items: center;
+            justify-content: revert;
+        }
+        #zone1 {
+            text-align: center;
+            height: 78px;
+            box-shadow: 1px 1px 30px #e0eaf3;
+            width: 370px;
+            max-height: 100%;
+            margin: 0 auto;
+        }
+        a.ship img {
+            width: 145px;
+            border-radius: 8px;
+            display: block;
+            margin: 34px 80px;
+        }
     }
