--- a/css/style.css
+++ b/css/style.css
@@ -1189,15 +1189,15 @@ div#dopBox {
         }
         #container1 div:nth-child(1) {
             grid-column-start: 1;
-            grid-column-end: 3;
-            grid-row-start:1 ;
-            grid-row-end: 2;
+            grid-column-end: 4;
+            grid-row-start: 1;
+            grid-row-end: 3;
         }
         #container1 {
             display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 100px;
-    grid-template-rows: 100px 124px 124px 124px 124px 124px 124px 50px 50px;
+    grid-template-rows: 13px 80px 80px 79px 72px 70px 35px;
         }
         #container1 img {
             border-radius: 8px;
@@ -1207,7 +1207,7 @@ div#dopBox {
         }
         .col2 {
             border: 1px solid white;
-            margin: 9px;
+            /*margin: 9px;*/
         }
         #containerPazl {
             width: 370px;
@@ -1234,7 +1234,7 @@ div#dopBox {
             width: 145px;
             border-radius: 8px;
             display: block;
-            margin: 34px 80px;
+            margin: 0px 80px;
         }
         .img3 {
             position: absolute;
@@ -1252,5 +1252,8 @@ div#dopBox {
         }
         body {
             overflow:scroll;
+        }
+        .strText {
+            font-size: 15px;
         }
     }
