--- a/css/style.css
+++ b/css/style.css
@@ -1201,7 +1201,7 @@ div#dopBox {
             display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 100px;
-    grid-template-rows: 13px 80px 80px 79px 72px 70px 35px;
+    grid-template-rows: 13px 80px 80px 80px 80px 76px 35px;
         }
         #container1 img {
             border-radius: 8px;
@@ -1262,7 +1262,7 @@ div#dopBox {
             animation: move 10s linear infinite;
         }
         body {
-            overflow:scroll;
+            overscroll-behavior-y: contain;
         }
         .strText {
             font-size: 15px;
